Fix double scroll problem

--- a/webview-ui/src/index.css
+++ b/webview-ui/src/index.css
@@ -20,6 +20,7 @@ body {
   padding: 0;
   height: 100%;
   background-color: var(--vscode-sideBar-background);
+  overflow: hidden;
 }
 
 a {
